--- a/gitops/gaia-prod-deployment.yml
+++ b/gitops/gaia-prod-deployment.yml
@@ -13,7 +13,7 @@ spec:
         app: gaia-frontend
     spec:
       containers:
-      - name: prospectus-frontend
+      - name: gaia-frontend
         image: warpwing/gaia:latest
         ports:
         - containerPort: 8501
