--- a/gitops/gaia-frontend-lb.yml
+++ b/gitops/gaia-frontend-lb.yml
@@ -6,6 +6,7 @@ spec:
   type: LoadBalancer
   ports:
     - protocol: TCP
+      nodePort: 30001
       port: 8501
       targetPort: 8501
   selector:
